--- a/src/Pages/Public/HomePage/HomePage.css
+++ b/src/Pages/Public/HomePage/HomePage.css
@@ -73,7 +73,7 @@ body {
   align-items: center;
   padding: 1.5rem 2rem;
   /* background-color: rgba(0, 0, 0, 0.3); */
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(0px);
   position: relative;
   z-index: 10;
 }
@@ -462,7 +462,7 @@ body {
   left: 0;
   width: 100%;
   z-index: 100;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   height: auto;
