--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -66,7 +66,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 0 auto;
   padding: 0 2rem;
   height: 100%;
@@ -82,7 +82,7 @@
 .navbar-center {
   flex: 2;
   display: flex;
-  justify-content: center;
+  justify-content: right;
 }
 
 /* Welcome message styling */
@@ -106,7 +106,7 @@
 
 .navbar-left a {
   display: flex;
-  align-items: center;
+  align-items: left;
   text-decoration: none;
   color: var(--white);
 }
@@ -136,8 +136,8 @@
 /* Navigation links */
 .navbar-links {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  justify-content: right;
   gap: 2rem;
   height: 100%;
 }
@@ -191,7 +191,7 @@
 /* Authentication buttons */
 .navbar-auth {
   display: flex;
-  align-items: center;
+  align-items: right;
   flex: 1;
   justify-content: flex-end;
 }
