--- a/src/Pages/Public/Orders/OrderDetails.css
+++ b/src/Pages/Public/Orders/OrderDetails.css
@@ -52,6 +52,7 @@
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
+  padding-top: 100px; 
   padding: 0;
   background: linear-gradient(160deg, var(--gray-50) 0%, var(--white) 100%);
   width: 100%;
