--- a/src/Pages/Public/HomePage/HomePage.css
+++ b/src/Pages/Public/HomePage/HomePage.css
@@ -109,6 +109,9 @@ body {
   transition: all 0.3s ease;
   position: relative;
 }
+.nav-link.contact{
+  margin-right: 1.5rem;
+}
 
 .nav-link:after {
   content: '';
